# let-the-mirte-robot-drive-around-in-duckietown

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  Cargo.toml  Dockerfile  Dockerfile.cross  README.md
.cargo/: config.toml
.gitlab/issue_templates/: template.md
.gitlab/merge_request_templates/: template.md
april-tags/: README.md  continuous_detection.launch  settings.yaml  tags.yaml
bridge/: Cargo.toml  README.md
bridge/src/: lib.rs
common/: README.md
common/src/: lib.rs
common/src/structs/: mod.rs
cv/: Cargo.toml  Dockerfile  README.md
cv-py/: .gitignore  Cargo.toml  README.md  cv_py.pyi  pyproject.toml  test.py
cv-py/src/: classes.rs  lib.rs
cv/benches/benchmarks/: detect_lines.rs
cv/examples/: blur.rs  mat_from_array.rs  plot_lines.rs  save_to_disk.rs  window.rs
cv/src/: cv_error.rs  detect_lines.rs  draw_lines.rs  image.rs  image_part.rs  lane.rs  lib.rs  line.rs  object.rs  test.rs
mirte-documentation/: .gitmodules  README.md  conf.py  index.rst  requirements.txt
mirte-documentation/doc/: duckietown_detect_line.rst  duckietown_instalation_guide.rst  duckietown_python_api.rst  duckietown_ros_api.rst  duckietown_stop_line.rst  test.rst
mirte-documentation/doc/duckietown_mirte/: Duckietown_README.md  duckietown_detect_line.rst  duckietown_example.rst  duckietown_instalation_guide.rst  duckietown_python_api.rst  duckietown_ros_api.rst  duckietown_stop_line.rst  installation_guide.txt
mirte-rs/: .dockerignore  CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.cross  README.md  duckietown_navigator.launch  package.xml
mirte-rs/.cargo/: config.toml
mirte-rs/common/src/: lib.rs  logger.rs  test.rs
mirte-rs/common/src/structs/: colour.rs  lane.rs  line.rs  line_segment.rs  mod.rs  obstacle.rs  obstacle_list.rs  point.rs  vector.rs
mirte-rs/core/: Cargo.toml
mirte-rs/core/examples/: detect_obstacles.rs  draw_lane.rs  image_feed.rs
mirte-rs/core/src/: detection.rs  lib.rs  main.rs  test.rs
mirte-rs/cv/: Cargo.toml
mirte-rs/cv/benches/: bench_main.rs
mirte-rs/cv/benches/benchmarks/: detect_lines.rs  mod.rs
mirte-rs/cv/examples/: window.rs
mirte-rs/cv/src/: detect_lines.rs  draw_lines.rs  image.rs  lib.rs  object.rs
mirte-rs/examples/: detect_obstacles.rs  draw_lane.rs  image_feed.rs
mirte-rs/launch/: image_processor.launch
mirte-rs/mirte-rs/: Cargo.toml
mirte-rs/mirte-rs/src/: lib.rs  main.rs
mirte-rs/ros/src/: drive.rs  lib.rs  param.rs  publishers.rs  ros_error.rs  test.rs
mirte-rs/rostest/: Cargo.toml
mirte-rs/rostest/rostest-macro/src/: lib.rs
mirte-rs/rostest/src/: lib.rs
mirte-rs/src/: detect_lane.rs  detection.rs  lane.rs  lane_error.rs  lib.rs  main.rs  mirte_error.rs
mirte-web-interface/: package-lock.json
mirte-web-interface/nodejs-backend/: package-lock.json
mirte-web-interface/vue-frontend/: package-lock.json
mirte-web-interface/vue-frontend/locales/: en.json  nl.json
mirte-web-interface/vue-frontend/src/assets/blockly/: duckietown.js
mirte-web-interface/vue-frontend/src/assets/json/: properties_ph.json
mirte-web-interface/vue-frontend/src/components/: Blockly.vue
mirte_duckietown_msgs/: README.md
python/: .pylintrc  README.md  camera_feed.py  computer_vision.py  cv.py  example.py  example_april_tag.py  example_april_tags.py  example_draw.py  example_follow_lane.py  example_image.py  example_obstacles.py  example_stop_line.py  lane_follower.py  lane_follower_tests.py  line.py  requirements.txt  robot.py  setup.py  test.py  test_common.py  test_duckietown.py  test_util.py  user.py
python/mirte_duckietown/: _common.py  _topic.py  _util.py  apriltagsDB.yaml  duckietown.py  object.py  sign.py
python/mirte_robot/: robot.py
python/testing/: README.md
python/testing/camera/: renderer.py  ros_connection.py
python/testing/towns/: duckievoort.mtl
ros/: Cargo.toml  README.md
ros/examples/: drive.rs
ros/src/: drive.rs  lib.rs  param.rs  publishers.rs  ros_error.rs
rostest/rostest-macro/: Cargo.toml
rust/: Dockerfile  README.md
rust/.cargo/: config.toml
rust/common/: Cargo.toml  README.md
rust/common/src/: lib.rs
rust/common/src/structs/: colour.rs  lane.rs  line.rs  line_segment.rs  mod.rs  object.rs  obstacle.rs  obstacle_list.rs  point.rs  threshold.rs  vector.rs
rust/cv/: Cargo.toml
rust/cv/benches/benchmarks/: detect_lines.rs
rust/cv/examples/: window.rs
rust/cv/src/: detect_lines.rs  draw_lines.rs  image.rs  image_part.rs  line.rs  object.rs
rust/mirte-rs/: Cargo.toml  README.md
rust/mirte-rs/examples/: detect_obstacles.rs  draw_lane.rs  image_feed.rs
rust/mirte-rs/src/: detection.rs  lib.rs  main.rs
rust/ros/: Cargo.toml  README.md
rust/ros/src/: drive.rs  lib.rs  param.rs  publishers.rs
rust/rostest/rostest-macro/src/: lib.rs
rust/rostest/src/: lib.rs
starters-guide/: alive?.md  duckietown_python_api.rst  duckietown_ros-api.rst  front_page.md
test-crate/: Cargo.toml
test-crate/src/: main.rs
test-framework/: Cargo.toml
test-framework/rostest/: Cargo.toml
test-framework/rostest/src/: lib.rs
test-framework/src/: example_nodes.rs  lib.rs
traffic-light/: README.md  traffic-light.ino
