[package]
name = "cv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.81.2", default-features = false, features = ["imgproc", "ximgproc"] }
thiserror = "1.0.40"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
opencv = { version = "0.81.2", default-features = false, features = ["imgproc", "imgcodecs", "ximgproc"] }

[[bench]]
name = "bench_main"
harness = false
