[package]
name = "cv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.76.4", default-features = false, features = ["imgproc", "ximgproc", "imgcodecs", "highgui"] }
thiserror = "1.0.40"
derive_more = { version = "0.99.17", features = ["add", "mul", "sum", "not"] }
float-cmp = "0.9.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false
