<?xml version="1.0"?>
<package format="2">
  <name>mirte-rs</name>
  <version>0.0.1</version>
  <description>Contains code to navigate around Duckietown using computer vision.</description>

  <maintainer email="your_mail@todo.todo">your_name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

