[package]
name = "ros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cv-bridge = { git = "https://github.com/AntoniosBarotsis/cv-bridge-rs", rev = "04742ada4f9a78172c50261abe86d0ff9d4b3812"}
rosrust = { git = "https://github.com/AntoniosBarotsis/rosrust", rev = "b2833d40205f2acf1c73fdfacb5cac92ab31a506"}
rosrust_msg = { git = "https://github.com/AntoniosBarotsis/rosrust", rev = "b2833d40205f2acf1c73fdfacb5cac92ab31a506"}
env_logger = "0.10.0"
once_cell = "1.17.1"
thiserror = "1.0.40"
bridge = { path = "../bridge"}
rayon = "1.7.0"
