[package]
name = "ros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosrust = "0.9.11"
rosrust_msg = "0.1.7"
cv-bridge = "0.3.3"
cv = { path = "../cv"}
env_logger = "0.10.0"
once_cell = "1.17.1"
thiserror = "1.0.40"
bridge = { path = "../bridge"}
rayon = "1.7.0"
