[package]
name = "mirte-rs"
version = "0.1.0"
edition = "2021"
repository = "https://gitlab.ewi.tudelft.nl/cse2000-software-project/2022-2023-q4/cluster-09/let-the-mirte-robot-drive-around-in-duckietown/let-the-mirte-robot-drive-around-in-duckietown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ros = { path = "../ros"}
cv = { path = "../cv"}
common = { path = "../common" }
thiserror = "1.0.40"
