[package]
name = "rostest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12.1"
nix = "0.26.2"
rosrust = "0.9"
rosrust_msg = "0.1"
serial_test  = "2.0.0"

[dependencies.rostest-macro]
path = "rostest-macro"

[lib]
doctest = false